--- a/front-end/src/app/game/answer-widget/answer-widget.component.scss
+++ b/front-end/src/app/game/answer-widget/answer-widget.component.scss
@@ -13,7 +13,9 @@
 }
 
 .clickableItem {
-    background-color: rgba(pink, 40%);
+    //background-color: rgba(pink, 40%);
+    //background-color: rgba(orange, 40%);
+    background-color: rgba(lightblue, 50%);
     width: 90%;
     height: 90%;
     display: flex;
