--- a/front-end/src/app/header/header.component.scss
+++ b/front-end/src/app/header/header.component.scss
@@ -29,30 +29,14 @@ a:hover {
 #navbar {
   width: 100%;
 }
-/**
- Use :host to apply some style to your entire component #24c6dc, #514a9d
- #0f0c29, #302b63, #24243e linear-gradient(to right,#302b63, #0f0c29, #302b63);
- */
- /*
-:host {
-  color: $white;
+
+.boostrapNavbar{
+  //background-color:#e3f2fd;
+  background-color: rgba(lightgreen, 40%);
+  //background-color: rgba(rgb(228, 85, 85), 50%);
+  background-image: linear-gradient(to right, lightblue , lightgreen);
 }
 
-
-.header {
-  float: center;
-  width: 100%;
-  background-color: $light-purple;
-  padding: 0.55em;
-  text-align: center;
-  font-weight: bold;
-  position: fixed;
-  margin-top: -3rem;
-  box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
+.goBackButton{
+  color: grey;
 }
-
-.header-img {
-  @extend .header;
-  padding: 0.3em;
-}
-*/
