--- a/front-end/src/app/start/password/password.component.html
+++ b/front-end/src/app/start/password/password.component.html
@@ -1,7 +1,7 @@
 <app-header [isHomeBrand]="true" [title]="headerTitle"></app-header>
-<div class="goback-button" routerLink= "/">
+<!--<div class="goback-button" routerLink= "/">
     <i class="fa fa-arrow-left" aria-hidden="true"></i>
-</div>
+</div>-->
 
 <div class="main">
 <div class = "center ">
@@ -9,7 +9,7 @@
         <input class = "password"[formControlName]="'password'" type="text" placeholder="Entrer le mot de passe">
         <div class = "big-button" (click) = "loginUser()">Valider</div>
         <div *ngIf="!isCorrect">
-            Vous avez entrez une mauvaise valeur ... Veuillez réessayer !
+            Vous avez entré une mauvaise valeur ... Veuillez réessayer !
         </div>
     </form>
 </div>
