--- a/front-end/src/app/core/quizzes/timer-form-modal/timer-form-modal.component.html
+++ b/front-end/src/app/core/quizzes/timer-form-modal/timer-form-modal.component.html
@@ -22,7 +22,7 @@
         </form>
     </div>
     <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" (click) = "reset();modal.close()">Annuler</button>
-        <button type="button" class="btn btn-primary" (click)= "save();modal.close()">Enregistrer</button>
+        <button type="button" class="btn btn-primary " (click)= "save();modal.close()">Enregistrer</button>
+        <button type="button" class="btn btn-outline-secondary" (click) = "reset();modal.close()">Annuler</button>
     </div>
 </ng-template>
