--- a/front-end/src/styles/variables.scss
+++ b/front-end/src/styles/variables.scss
@@ -4,10 +4,17 @@ $magenta: #903fb5;
 
 
 $white:             white;
+/*
 $very-light-purple: rgb(216, 167, 255);
 $light-purple:      rgb(151, 87, 255);
 $purple:            rgb(92, 0, 212);
+$deep-purple:       rgb(69, 0, 158);*/
+
+$very-light-purple: rgb(167, 193, 255);
+$light-purple:      rgb(87, 90, 255);
+$purple:            rgb(74, 0, 212);
 $deep-purple:       rgb(69, 0, 158);
+
 
 $very-light-blue:   rgb(95, 129, 192);
 $blue:              rgb(12, 119, 207);//rgb(0, 173, 189);
