--- a/front-end/src/app/header/header.component.scss
+++ b/front-end/src/app/header/header.component.scss
@@ -6,10 +6,11 @@ a:hover {
   cursor: pointer;
 }
 
+/*
 .navbar-text {
   margin: auto;
   text-align: center;
-}
+}*/
 
 .text-center {
   position: absolute;
@@ -17,12 +18,22 @@ a:hover {
   transform: translatex(-50%);
 }
 
+.coloredText {
+  margin: auto;
+  text-align: center;
+  color: rgb(0, 0, 0);
+}
+
+i {
+  color: white;
+}
+
 .nav-link {
-  color: rgb(148, 0, 148);
+  color: rgb(0, 49, 163);
 }
 
 .nav-link:hover {
-  color: rgb(97, 0, 97);
+  color: rgb(199, 80, 0);
   cursor: pointer;
 }
 
@@ -34,7 +45,7 @@ a:hover {
   //background-color:#e3f2fd;
   background-color: rgba(lightgreen, 40%);
   //background-color: rgba(rgb(228, 85, 85), 50%);
-  background-image: linear-gradient(to right, lightblue , lightgreen);
+  background-image: linear-gradient(to right, rgb(105, 0, 226), rgb(105, 233, 126));
 }
 
 .goBackButton{
