--- a/front-end/src/app/game/end/end.component.html
+++ b/front-end/src/app/game/end/end.component.html
@@ -2,7 +2,7 @@
     <div *ngIf="player">
         <div class="bravoName">Bravo {{player.name}} !</div>
     </div>
-    <div *ngIf="player" class="vertical-center">
+    <div *ngIf="player" class="btns-column">
         <div class="big-button" routerLink= "..">Recommencer</div>
         <div class="big-button" routerLink= "/players/{{player.id}}">Choisir un autre quiz</div>
     </div>
