--- a/front-end/src/app/results/statistics/statistics.component.html
+++ b/front-end/src/app/results/statistics/statistics.component.html
@@ -1,6 +1,6 @@
     <div *ngIf="player">
         <div class="flex-list">
-            <div *ngFor="let attempt of playerAttempts" >
+            <div *ngFor="let attempt of playerAttempts.reverse()" >
                 <button class="delete-button" (click)="deleteAttempt(attempt)">
                     <i class="fas fa-times"></i>
                 </button>
