--- a/front-end/src/app/start/password/password.component.html
+++ b/front-end/src/app/start/password/password.component.html
@@ -6,8 +6,8 @@
 <div class="main">
 <div class = "center ">
     <form [formGroup]="loginForm">
-        <input class = "password"[formControlName]="'password'" type="text" placeholder="Entrer le mot de passe">
-        <div class = "big-button" (click) = "loginUser()">Valider</div>
+        <input autofocus class = "password"[formControlName]="'password'" type="text" placeholder="Entrer le mot de passe">
+        <button type="submit" class = "big-button" (click) = "loginUser()">Valider</button>
         <div *ngIf="!isCorrect">
             Vous avez entré une mauvaise valeur ... Veuillez réessayer !
         </div>
