--- a/front-end/src/app/core/quizzes/quiz-list-admin/quiz-list-admin.component.html
+++ b/front-end/src/app/core/quizzes/quiz-list-admin/quiz-list-admin.component.html
@@ -17,7 +17,7 @@
         </div>
     </div>
     <div class="quiz-list" *ngIf="quizListFiltered && quizListFiltered.length!==0; else noQuizFound">
-        <div class="fixed-container-bigger" *ngFor="let quiz of quizListFiltered">
+        <div class="fixed-container-bigger" *ngFor="let quiz of quizListFiltered | sortDate: '-creationDate'">
             <div class = "tag" *ngIf = "!globalService.isValid(quiz)">
                 INCOMPLET
             </div>
