--- a/front-end/src/app/results/statistics/statistics.component.html
+++ b/front-end/src/app/results/statistics/statistics.component.html
@@ -1,6 +1,10 @@
     <div *ngIf="player">
+        <div class="custom-control custom-switch">
+            <input type="checkbox" class="custom-control-input" id="customSwitches" [checked] = "ordreChro" (change)="switchOrder()">
+            <label class="custom-control-label" for="customSwitches" style="margin-bottom: 1em;">Ordre chronologique</label>
+        </div>
         <div class="flex-list">
-            <div *ngFor="let attempt of playerAttempts.reverse()" >
+            <div *ngFor="let attempt of playerAttempts" >
                 <button class="delete-button" (click)="deleteAttempt(attempt)">
                     <i class="fas fa-times"></i>
                 </button>
