--- a/front-end/src/app/core/questions/question-view/question-view.component.scss
+++ b/front-end/src/app/core/questions/question-view/question-view.component.scss
@@ -123,3 +123,14 @@ h2 {
 .imageAndText{
     display: flex;
 }
+
+
+.fixed-container{
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 1em;
+  }
+  
+  .horizontal-center{
+    margin-top: 2em;
+  }
