--- a/front-end/src/app/core/players/player-view/player-view.component.scss
+++ b/front-end/src/app/core/players/player-view/player-view.component.scss
@@ -14,3 +14,12 @@
     font-style: italic;
     font-size: 80%;
   }
+
+.fixed-container{
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.horizontal-center{
+  margin-top: 2em;
+}
