--- a/front-end/src/app/core/quizzes/quiz-view/quiz-view.component.scss
+++ b/front-end/src/app/core/quizzes/quiz-view/quiz-view.component.scss
@@ -23,3 +23,13 @@
     min-width: 20rem;
     min-height: 20rem;
 }
+
+.fixed-container{
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 1em;
+  }
+  
+  .horizontal-center{
+    margin-top: 2em;
+  }
