--- a/front-end/src/app/start/password/password.component.scss
+++ b/front-end/src/app/start/password/password.component.scss
@@ -3,7 +3,7 @@
 @import '../../../styles/common.scss';
 
 .password{
-    margin-left: 1.5em;
+    //margin-left: 1.5em;
     text-align: center;
     border: solid;
     color: green;
