quiz section outlined by default

--- a/front-end/src/app/header/header.component.html
+++ b/front-end/src/app/header/header.component.html
@@ -4,7 +4,7 @@
     </a>
     <p class="nav justify-content-end">
       <a class="nav-link" routerLink= "/admin/player-list">Accueillis</a>
-      <a class="nav-link" routerLink= "/admin/quiz-list">Quiz</a>
+      <a class="nav-link active" routerLink= "/admin/quiz-list">Quiz</a>
       <a class="nav-link" routerLink= "/admin/gallery">Galerie</a>
       <a class="nav-link" routerLink= "/admin/theme-list">Thèmes</a>
     </p>
