--- a/front-end/src/app/start/password/password.component.html
+++ b/front-end/src/app/start/password/password.component.html
@@ -1,16 +1,12 @@
+<body>
 <app-header [isHomeBrand]="true" [title]="headerTitle"></app-header>
-<!--<div class="goback-button" routerLink= "/">
-    <i class="fa fa-arrow-left" aria-hidden="true"></i>
-</div>-->
-
-<div class="main">
 <div class = "center ">
     <form [formGroup]="loginForm">
         <input autofocus class = "password"[formControlName]="'password'" type="text" placeholder="Entrer le mot de passe">
-        <button type="submit" class = "big-button" (click) = "loginUser()">Valider</button>
+        <button type="submit" class="big-button" (click) = "loginUser()">Valider</button>
         <div *ngIf="!isCorrect">
             Vous avez entré une mauvaise valeur ... Veuillez réessayer !
         </div>
     </form>
 </div>
-</div>
+</body>
