--- a/front-end/src/app/game/end/end.component.scss
+++ b/front-end/src/app/game/end/end.component.scss
@@ -10,12 +10,18 @@
 .bravoName {
     font-size: 3rem;
     font-weight: bold;
-}
-
-.main{
+    display: flex;
+    justify-content: center; /*horizontal centering*/
+    align-items:center; /*vertical centering*/
     text-align: center;
+    width: 100%;
+    height: auto;
+    //margin-top: 2.5%;
+    margin-bottom: 5%;
+    padding: 0.5em;
 }
 
+/*
 .btns-column {
     display: flex;
     height: 100%;
@@ -30,4 +36,30 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}*/
+
+#box-vertical {
+    position: absolute;
+    //left: 10%;
+    //right: 10%;
+    height: 100%;
+    width: 80%;
+    left: 10%;
+    //max-height: 8rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /*horizontal centering*/
+    align-items:center; /*vertical centering*/
+    text-align: center;
+}
+
+.item-vertical {
+    @extend .big-button;//.button-purple-theme;
+    display: flex;
+    justify-content: center; /*horizontal centering*/
+    align-items:center; /*vertical centering*/
+    text-align: center;
+    width: 100%;
+    height: auto;
+    //font-size: 300%;
 }
