--- a/front-end/src/app/game/end/end.component.html
+++ b/front-end/src/app/game/end/end.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="player" id="box-vertical">
-    <div class="bravoName">Bravo {{player.name}} !</div>
-    <div class="item-vertical" routerLink= "..">Recommencer</div>
-    <div class="item-vertical" routerLink= "/players/{{player.id}}">Choisir un autre quiz</div>
+    <div class="bravoName item-vertical">Bravo {{player.name}} !</div>
+    <div class="big-button item-vertical" routerLink= "..">Recommencer</div>
+    <div class="big-button item-vertical" routerLink= "/players/{{player.id}}">Choisir un autre quiz</div>
 </div>
