--- a/front-end/src/app/results/quiz-attempt-details/quiz-attempt-details.component.scss
+++ b/front-end/src/app/results/quiz-attempt-details/quiz-attempt-details.component.scss
@@ -1,7 +1,7 @@
 @import 'src/styles/card.scss';
 @import 'src/styles/layout.scss';
 @import 'src/styles/images.scss';
-@import 'src/styles/common.scss';
+@import '../../../styles/common.scss';
 
 .quiz-title {
   margin-bottom: 2rem;
