--- a/front-end/src/app/results/quiz-attempt/quiz-attempt.component.scss
+++ b/front-end/src/app/results/quiz-attempt/quiz-attempt.component.scss
@@ -1,5 +1,11 @@
-@import 'src/styles/card.scss';
+@import '../../../styles/card.scss';
+@import '../../../styles/common.scss';
 
 .card:hover{
     cursor: pointer;
 }
+
+/*
+.attempt-card {
+    @extend .quiz-card;
+}*/
