--- a/front-end/src/app/results/quiz-attempt-details/quiz-attempt-details.component.html
+++ b/front-end/src/app/results/quiz-attempt-details/quiz-attempt-details.component.html
@@ -1,14 +1,14 @@
 <body>
-    <app-header type="basic" [isHomeBrand]="false" [title] = "headerTitle"></app-header>
-    <div *ngIf="loaded()" >
-        <div class="quiz-title">
+<app-header type="basic" [isHomeBrand]="false" [title] = "headerTitle"></app-header>
+<div *ngIf="loaded()" >
+    <div class="quiz-title">
         <div *ngIf="quizImage">
             <h3>{{player.name}} : {{quiz.name}} 
             <img class = "thumbnail-header" [src]="globalService.getImgSrc1(quizImage)" alt="image">
             ({{attempt.date | date : 'dd/MM/yyyy'}})</h3>
         </div>
         <div *ngIf="!quizImage">
-        <h3>{{player.name}} : {{quiz.name}} ({{attempt.date | date : 'dd/MM/yyyy'}})</h3>
+            <h3>{{player.name}} : {{quiz.name}} ({{attempt.date | date : 'dd/MM/yyyy'}})</h3>
         </div>
         <div class="resultats" *ngIf="attempt.timeOuts===1">{{attempt.timeOuts}} perte d'attention</div>
         <div class="resultats" *ngIf="attempt.timeOuts>1">{{attempt.timeOuts}} pertes d'attention</div>
@@ -17,25 +17,31 @@
         </div>
         <div class = "resultats" *ngIf="attempt.wrongAnswers.length===1">{{attempt.wrongAnswers.length}} faute </div>
         <div class = "resultats" *ngIf="attempt.wrongAnswers.length>1">{{attempt.wrongAnswers.length}} fautes </div>
-        </div>
-        <div class="quiz-list"> 
-            <div *ngFor="let question of quiz.questions"> 
-                <div class="quiz-card" *ngIf = "checkIfWrongQuestion(question)" (click)=seeQuestion(question.id)>
-                    A la question : {{question.label}}<br>
-                    La personne a répondu : 
-                    <div class = "answerList">
-                        <div *ngFor="let answer of attempt.wrongAnswers">
-                            <div class = "card" *ngIf = "answerInQuestion(answer, question)">
-                                {{answer.value}}
-                            </div>
-                        </div>
-                    </div>
-                    au lieu de : <br>
-                    <div class = "card">
-                        {{setRightAnswer(question).value}}
+    </div>
+    <div class="quiz-list"> 
+        <div *ngFor="let question of quiz.questions"> 
+
+            <div *ngIf="true; else notClickable">
+            <div class="quiz-card" *ngIf = "checkIfWrongQuestion(question)" (click)=seeQuestion(question.id)>
+                A la question : {{question.label}}<br>
+                La personne a répondu :
+                <div *ngFor="let answer of attempt.wrongAnswers" class = "answerList">
+                    <div class = "card" *ngIf = "answerInQuestion(answer, question)">
+                        {{answer.value}}
                     </div>
                 </div>
-            </div> 
-        </div>
+                au lieu de : <br>
+                <div class = "card">
+                    {{setRightAnswer(question).value}}
+                </div>
+            </div>
+            </div>
+            <ng-template #notClickable>
+                <div>not clickable because question no longer here</div>
+            </ng-template>
+
+
+        </div> 
     </div>
+</div>
 </body>
