--- a/front-end/src/app/results/quiz-attempt/quiz-attempt.component.html
+++ b/front-end/src/app/results/quiz-attempt/quiz-attempt.component.html
@@ -1,12 +1,12 @@
-<div *ngIf="loaded()" class="card">
-    <h5>{{quiz.name}}</h5>
-    <ul>
-        <li *ngIf="attempt.timeOuts>0"> Pertes d'attention ({{attempt.timeOuts}})</li>
-        <li *ngIf="attempt.wrongAnswers && attempt.wrongAnswers.length>0; else perfect"> {{attempt.wrongAnswers.length}} faute(s)</li>
-    </ul>
-    <h6>{{attempt.date | date : 'dd/MM/yyyy'}}</h6>
+<div *ngIf="loaded()">
+    <div class="quiz-card">
+        <h5>{{quiz.name}}</h5>
+        <ul>
+            <li *ngIf="attempt.timeOuts>0"> Pertes d'attention ({{attempt.timeOuts}})</li>
+            <li *ngIf="attempt.wrongAnswers && attempt.wrongAnswers.length>0; else perfect"> {{attempt.wrongAnswers.length}} faute(s)</li>
+            <ng-template #perfect><li>Sans faute</li></ng-template>
+        </ul>
+        <h6>{{attempt.date | date : 'dd/MM/yyyy'}}</h6>
+    </div>
 </div>
 
-<ng-template #perfect>
-    <li>Sans faute</li>
-</ng-template>
