--- a/front-end/src/styles/common.scss
+++ b/front-end/src/styles/common.scss
@@ -17,6 +17,12 @@ div:focus {
     box-shadow: none !important;
 }
 
+app-quiz-attempt:focus {
+    outline: none !important;
+    box-shadow: none !important;
+}
+//style="outline: none;"
+
 .button-purple-theme {
     background-color: $purple;
     border-radius: 10rem;
