--- a/front-end/src/app/results/quiz-attempt-details/quiz-attempt-details.component.html
+++ b/front-end/src/app/results/quiz-attempt-details/quiz-attempt-details.component.html
@@ -1,5 +1,5 @@
 <body>
-<app-header type="basic" [isHomeBrand]="false" [title] = "headerTitle"></app-header>
+<app-header type="basic" [isHomeBrand]="false" [title]="headerTitle"></app-header>
 <div *ngIf="loaded()" >
     <div class="quiz-title">
         <div *ngIf="quizImage">
@@ -10,13 +10,13 @@
         <div *ngIf="!quizImage">
             <h3>{{player.name}} : {{quiz.name}} ({{attempt.date | date : 'dd/MM/yyyy'}})</h3>
         </div>
-        <div class="resultats" *ngIf="attempt.timeOuts===1">{{attempt.timeOuts}} perte d'attention</div>
-        <div class="resultats" *ngIf="attempt.timeOuts>1">{{attempt.timeOuts}} pertes d'attention</div>
         <div class = "resultats" *ngIf = "!attempt.wrongAnswers || attempt.wrongAnswers.length===0">
             <h2>Sans faute</h2>
         </div>
         <div class = "resultats" *ngIf="attempt.wrongAnswers.length===1">{{attempt.wrongAnswers.length}} faute </div>
         <div class = "resultats" *ngIf="attempt.wrongAnswers.length>1">{{attempt.wrongAnswers.length}} fautes </div>
+        <div class="resultats" *ngIf="attempt.timeOuts===1">{{attempt.timeOuts}} perte d'attention</div>
+        <div class="resultats" *ngIf="attempt.timeOuts>1">{{attempt.timeOuts}} pertes d'attention</div>
     </div>
     <div class="quiz-list"> 
         <div *ngFor="let question of quiz.questions"> 
@@ -27,7 +27,8 @@
                 La personne a répondu :
                 <div *ngFor="let answer of attempt.wrongAnswers" class = "answerList">
                     <div class = "card" *ngIf = "answerInQuestion(answer, question)">
-                        {{answer.value}}
+                        <div *ngIf="answer.value">{{answer.value}}</div>
+                        <div *ngIf="answer.imageId">{{answer.imageId}}</div>
                     </div>
                 </div>
                 au lieu de : <br>
@@ -39,8 +40,6 @@
             <ng-template #notClickable>
                 <div>not clickable because question no longer here</div>
             </ng-template>
-
-
         </div> 
     </div>
 </div>
