--- a/front-end/src/app/results/quiz-attempt/quiz-attempt.component.scss
+++ b/front-end/src/app/results/quiz-attempt/quiz-attempt.component.scss
@@ -1,10 +1,15 @@
 @import '../../../styles/card.scss';
 @import '../../../styles/common.scss';
+@import '../../../styles/variables.scss';
+@import '../../../styles/images.scss';
 
 .card:hover{
     cursor: pointer;
 }
 
+.title {
+    text-align: center;
+}
 /*
 .attempt-card {
     @extend .quiz-card;
