--- a/front-end/src/app/results/statistics/statistics.component.html
+++ b/front-end/src/app/results/statistics/statistics.component.html
@@ -1,6 +1,6 @@
     <div *ngIf="player">
         <div class="custom-control custom-switch">
-            <input type="checkbox" class="custom-control-input" id="customSwitches" [checked] = "ordreChro" (change)="switchOrder()">
+            <input type="checkbox" class="custom-control-input" id="customSwitches" [checked] = "chronologicalOrder" (change)="switchOrder()">
             <label class="custom-control-label" for="customSwitches" style="margin-bottom: 1em;">Ordre chronologique</label>
         </div>
         <div class="flex-list">
