--- a/front-end/src/app/core/questions/question-list/question-list.component.html
+++ b/front-end/src/app/core/questions/question-list/question-list.component.html
@@ -1,6 +1,6 @@
 <app-question-form-modal [quiz] = "quiz" ></app-question-form-modal>
   <div class="question-list" *ngIf = "quiz.questions && quiz.questions.length>0;else noQuestions">
-    <div class="" *ngFor="let question of quiz.questions">
+    <div *ngFor="let question of quiz.questions">
       <button class="delete-button" (click)="deleteQuestion(question)">
         <i class="fas fa-times"></i>
       </button>
