--- a/front-end/src/app/results/quiz-attempt-details/quiz-attempt-details.component.html
+++ b/front-end/src/app/results/quiz-attempt-details/quiz-attempt-details.component.html
@@ -10,44 +10,44 @@
         <div *ngIf="!attempt.quiz.image">
             <h3>{{player.name}} : {{attempt.quiz.name}} ({{attempt.date | date : 'dd/MM/yyyy'}})</h3>
         </div>
-        <div class = "resultats" *ngIf = "!attempt.wrongAnswers || attempt.wrongAnswers.length===0">
+        <div class="resultats" *ngIf = "!attempt.wrongAnswers || attempt.wrongAnswers.length===0">
             <h2>Sans faute</h2>
         </div>
-        <div class = "resultats" *ngIf="attempt.wrongAnswers.length===1">{{attempt.wrongAnswers.length}} faute </div>
-        <div class = "resultats" *ngIf="attempt.wrongAnswers.length>1">{{attempt.wrongAnswers.length}} fautes </div>
+        <div class="resultats" *ngIf="attempt.wrongAnswers.length===1">{{attempt.wrongAnswers.length}} faute </div>
+        <div class="resultats" *ngIf="attempt.wrongAnswers.length>1">{{attempt.wrongAnswers.length}} fautes </div>
         <div class="resultats" *ngIf="attempt.timeOuts===1">{{attempt.timeOuts}} perte d'attention</div>
         <div class="resultats" *ngIf="attempt.timeOuts>1">{{attempt.timeOuts}} pertes d'attention</div>
     </div>
-    <div class="quiz-list"> 
+    <div class="flex-list"> 
         <div *ngFor="let question of attempt.quiz.questions"> 
 <!--TODO finish clickable or not-->
             <div *ngIf="true; else notClickable">
-            <div class="quiz-card" *ngIf = "checkIfWrongQuestion(question)" (click)=seeQuestion(question.id)>
-                A la question :<br><br>
+            <div class="attempt-card" *ngIf = "checkIfWrongQuestion(question)" (click)=seeQuestion(question.id)>
                 <div *ngIf="question.label">{{question.label}}</div>
                 <div *ngIf="question.imageId && question.image">
-                    <img class="frame thumbnail" [src]="globalService.getImgSrc1(question.image)" alt="Image question">
+                    <img class="frame-question thumbnail" [src]="globalService.getImgSrc1(question.image)" alt="Image question">
                 </div>
                 <br>
-                A répondu :
-                <ol>
+                Réponse :
+                <!--<ol>-->
                 <div *ngFor="let answer of attempt.wrongAnswers"> 
                     <div *ngIf="answerInQuestion(answer, question)">
-                    <li>
-                        <div class="card">
+                    <!--<li>-->
+                        <div class="card-wrong">
                         <div *ngIf="answer.imageId && answer.image">
-                            <img class="frame thumbnail" [src]="globalService.getImgSrc1(answer.image)" alt="Image reponse">
+                            <img class="frame-little thumbnail" [src]="globalService.getImgSrc1(answer.image)" alt="Image reponse">
                         </div>
                         <div *ngIf="answer.value">{{answer.value}}</div>
                         </div>
-                    </li>
+                    <!--</li>-->
                     </div>
                 </div>
-                </ol>
-                au lieu de : <br>
-                <div class = "card" *ngIf="setRightAnswer(question)">
+                <!--</ol>-->
+                <br>
+                Au lieu de : <br>
+                <div class="card-right" *ngIf="setRightAnswer(question)">
                     <div *ngIf="currentRightAnswer.imageId && currentRightAnswer.image">
-                        <img class="frame thumbnail" [src]="globalService.getImgSrc1(currentRightAnswer.image)" alt="Image reponse">
+                        <img class="frame-little thumbnail" [src]="globalService.getImgSrc1(currentRightAnswer.image)" alt="Image reponse">
                     </div>
                     <div *ngIf="currentRightAnswer.value">{{currentRightAnswer.value}}</div>
                 </div>
